@@ -54,7 +54,14 @@ to true I<before> it is published, instead of aftewards. This both prevents an
 exception when a template to save a story that has not been published before,
 and eliminates the need for templates to seet the C<publish_status> on a story
 before calling C<publish_another()> for a another story that will search for
-the current story in the database. Reported by Rod Taylo (Bug # 1230). [David]
+the current story in the database. Reported by Rod Taylor (Bug # 1230).
+[David]
+
+=item *
+
+Related stories and media can no longer be added to container elements not
+based on related story and/or media element types. Reported by Marshall Roch
+(Bug # 1231). [David]
 
 =back
 
